
* Improved LaTeX typesetting of \<open>...\<close> using \guilsinglleft ...
\guilsinglright. INCOMPATIBILITY, need to use \usepackage[T1]{fontenc}
(which is now also the default in "isabelle mkroot").

* Simplified typesetting of \<guillemotleft>...\<guillemotright> using \guillemotleft ...
\guillemotright from \usepackage[T1]{fontenc} --- \usepackage{babel} is
no longer required.


*** HOL ***

* Theory "HOL-Library.Multiset": dedicated predicate "multiset" is gone,
use explict expression instead. Minor INCOMPATIBILITY.

* Theory "HOL-Library.Multiset": consolidated abbreviations Mempty,
Melem, not_Melem to empty_mset, member_mset, not_member_mset
respectively. Minor INCOMPATIBILITY.

* Theory "HOL-Library.Multiset": consolidated operation and fact names:
    inf_subset_mset ~> inter_mset
    sup_subset_mset ~> union_mset
    multiset_inter_def ~> inter_mset_def
    sup_subset_mset_def ~> union_mset_def
    multiset_inter_count ~> count_inter_mset
    sup_subset_mset_count ~> count_union_mset

* Theory "HOL-Library.Multiset": syntax precendence for membership
operations has been adjusted to match the corresponding precendences on
sets. Rare INCOMPATIBILITY.

* Session "HOL-Analysis" and "HOL-Probability": indexed products of
discrete distributions, negative binomial distribution, Hoeffding's
inequality, Chernoff bounds, Cauchy–Schwarz inequality for nn_integral,
and some more small lemmas. Some theorems that were stated awkwardly
before were corrected. Minor INCOMPATIBILITY.

* Theorems "antisym" and "eq_iff" in class "order" have been renamed to
"order.antisym" and "order.eq_iff", to coexist locally with "antisym"
and "eq_iff" from locale "ordering". INCOMPATIBILITY: significant
potential for change can be avoided if interpretations of type class
"order" are replaced or augmented by interpretations of locale
"ordering".

* Theorem "swap_def" now is always qualified as "Fun.swap_def". Minor
INCOMPATIBILITY; note that for most applications less elementary lemmas